@@ -1,3 +1,5 @@
+Changed some php communicator code to use Nitin's webapi in the near future
+Fixed some Nullpointer exceptions in the temp login code
 Deselect tree selections when a picture is selected from the (mega)list
 JCpg now does a correct calculation of the directory in which the user's photo's are stored: 10000 + user_id
 Did some changes to the crop editor code. The crop selection rectangle is now controlable by the mouse
